--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'><h1>Home</h1></div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
-    <ul class='employee-list'></ul>
+    <div class="scroll"><ul class='employee-list'></ul></div>
 </script>
 <script id="employee-li-tpl" type="text/x-handlebars-template">
     {{#.}}
@@ -15,6 +15,7 @@
 </script>
 
 <script src="phonegap.js"></script>
+<script src="lib/iscroll.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/storage/memory-store.js"></script>
